// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas de <GifExpertApp /> Debe renderizar el componente con una lista de categorías. 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <CategoriesAdd
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="Goku"
      key="Goku"
    />
    <GifGrid
      category="One Punch"
      key="One Punch"
    />
  </ol>
</Fragment>
`;

exports[`Pruebas de <GifExpertApp /> Debe renderizar el componente correctamente sin lista de categorías. 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <CategoriesAdd
    setCategories={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;
